<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LauncherX</string>
    <string name="menu1">电视直播</string>
    <string name="menu2">互动点播</string>
    <string name="menu3">智慧城市</string>
    <string name="menu4">电视商务</string>
    <string name="menu5">本地应用</string>
    <string name="menu6">自助服务</string>
    <string name="lay1_title1">节目指南</string>
    <string name="lay1_title2">影视搜索</string>
    <string name="lay1_title3">天天特价</string>
    <string name="lay1_title4">广告</string>
    <string name="lay2_title1"> 天天影院</string>
    <string name="lay2_title2">电影</string>
    <string name="lay2_title3">综艺</string>
    <string name="lay2_title4">少儿</string>
    <string name="lay2_title5">电视剧</string>
    <string name="lay2_title6">纪录片</string>
    <string name="lay2_title7">动漫</string>
    <string name="lay3_title1">阳光政务</string>
    <string name="lay3_title2">房产资讯</string>
    <string name="lay3_title3">旅游资讯</string>
    <string name="lay3_title4">消费资讯</string>
    <string name="lay3_title5">生活资讯</string>
    <string name="lay3_title6">美食资讯</string>
    <string name="lay3_title7">健康资讯</string>
    <string name="lay3_title8">人才教育</string>
    <string name="lay5_title1">应用市场</string>
    <string name="lay5_title2">我的应用</string>
    <string name="lay5_title3">媒体中心</string>
    <string name="lay5_title4">天气预报</string>
    <string name="lay5_title5">产品手册</string>
    <string name="lay5_title6">电视助手</string>
    <string name="lay5_title7">广告</string>
    <string name="lay6_title1">网络设置</string>
    <string name="lay6_title2">节目管理</string>
    <string name="lay6_title3">无线热点</string>
    <string name="lay6_title4">条件授权</string>
    <string name="lay6_title5">多屏互动</string>
    <string name="lay6_title6">升级管理</string>
    <string name="lay6_title7">本机信息</string>
    <string name="lay6_title8">系统设置</string>
    <string name="custom">自定义</string>
    <string name="no_message">应用未安装</string>
    <string name="no_apps">没有可添加应用</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="channel_is_null">没有节目，请搜索</string>
    <string name="net_no_card">网络未连接，请插入智能卡</string>
    <string name="card_no_auth">网络未连接，请检查智能卡授权</string>
    <string name="net_no_connect">网络未连接，请检查网络设置</string>
    <string name="net_no_auth">网络未授权</string>

    <!-- 下载界面 -->
    <string name="app_version">软件版本：</string>
    <string name="app_renzheng">官方认证：</string>
    <string name="app_size">软件大小：</string>
    <string name="app_shipei">适配硬件：</string>
    <string name="app_developer">开 发 者：</string>
    <string name="prompt1">无病毒 •</string>
    <string name="prompt2">无广告 •</string>
    <string name="prompt3">无插件</string>
    <string name="download_tip">正在下载应用，请等待...</string>
    <string name="download">下载</string>
    <string name="update">更新</string>
    <string name="open">打开</string>
    <string name="download_finish">下载完成</string>
    <string name="install">正在安装，请等待...</string>
    <string name="app_tip_title">您可以选择替换或者删除快捷方式</string>
    <string name="app_tip_replace">替换</string>
    <string name="app_tip_delete">删除</string>
    <string name="app_add_tip">没有可添加的应用</string>
    <string name="install_error">安装失败,请稍后重试</string>

</resources>