<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="@drawable/app_dialog_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            style="@style/TextSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/app_tip_title" />

        <LinearLayout
            android:id="@+id/btn_replace"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/app_focus_dialog_selector"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_replace" />

            <TextView
                style="@style/TextSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/app_tip_replace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/app_focus_dialog_selector"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_del" />

            <TextView
                style="@style/TextSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/app_tip_delete" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>