<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customAttr="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="43dp"
                android:src="@drawable/logo"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="29dp"
                android:gravity="center_vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/lau_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/lau_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/top_line" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/lau_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/lau_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/top_line" />

                <TextView
                    android:id="@+id/lau_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/lau_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:maxWidth="360dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp" >

                    <ImageView
                        android:id="@+id/btn_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/btn_ring"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:nextFocusLeft="@id/btn_msg"
                        android:scaleType="centerInside"
                        android:src="@drawable/icon_msg" />

                    <TextView
                        android:id="@+id/lau_mail_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/pop_bg"
                        android:focusable="false"
                        android:gravity="center"
                        android:singleLine="true" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="11dp"
                    android:src="@drawable/top_line" />

                <ImageView
                    android:id="@+id/btn_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_ring"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_calendar" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="11dp"
                    android:src="@drawable/top_line" />

                <ImageView
                    android:id="@+id/btn_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="11dp"
                    android:background="@drawable/btn_ring"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusRight="@id/btn_card"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_card" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="100dp" >

            <TextView
                android:id="@+id/lau_menu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/focus_menu_selector"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusLeft="@id/lau_menu1"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/menu1"
                android:textColor="@color/text_focus_selector"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lau_menu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:background="@drawable/focus_menu_selector"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusDown="@+id/channe_lv"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/menu2"
                android:textColor="@color/text_focus_selector"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lau_menu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:background="@drawable/focus_menu_selector"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusDown="@+id/channe_lv"
                android:nextFocusRight="@+id/lau_menu4"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/menu3"
                android:textColor="@color/text_focus_selector"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lau_menu4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:background="@drawable/focus_menu_selector"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusDown="@+id/lay4_item1"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/menu4"
                android:textColor="@color/text_focus_selector"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lau_menu5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:background="@drawable/focus_menu_selector"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusDown="@+id/lay5_item1"
                android:nextFocusLeft="@+id/lau_menu4"
                android:nextFocusRight="@+id/lau_menu6"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/menu5"
                android:textColor="@color/text_focus_selector"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lau_menu6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:background="@drawable/focus_menu_selector"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusDown="@+id/lay6_item1"
                android:nextFocusLeft="@+id/lau_menu5"
                android:nextFocusRight="@+id/lau_menu6"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/menu6"
                android:textColor="@color/text_focus_selector"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="58dp"
            android:layout_marginRight="110dp"
            android:layout_marginTop="660dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_laba"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icon_pop"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/iv_laba_line"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:src="@drawable/icon_pop_line" />

            <TextSwitcher
                android:id="@+id/ts_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:visibility="gone" >
            </TextSwitcher>

            <com.launcher.ScrollTextView
                android:id="@+id/autoscroll"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@android:color/transparent" />
        </LinearLayout>
    </RelativeLayout>

    <com.launcher.widget.FcScrollView
        android:id="@+id/lau_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="130dp" >

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <include
                android:id="@+id/m_layout1"
                layout="@layout/layout1" />

            <include
                android:id="@+id/m_layout2"
                layout="@layout/layout2" />

            <include
                android:id="@+id/m_layout3"
                layout="@layout/layout3" />

            <include
                android:id="@+id/m_layout4"
                layout="@layout/layout4" />

            <include
                android:id="@+id/m_layout5"
                layout="@layout/layout5" />

            <include
                android:id="@+id/m_layout6"
                layout="@layout/layout6" />
        </LinearLayout>
    </com.launcher.widget.FcScrollView>

    <Button
        android:id="@+id/lau_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/m_focus"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="gone" />

</RelativeLayout>